# agentic-workspace

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TODO.md  package.json  pnpm-lock.yaml  turbo.json
apps/agentic-workbench/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/agentic-workbench/src-tauri/capabilities/: default.json
apps/agentic-workbench/src-tauri/icons/: icon.icns
apps/agentic-workbench/src-tauri/src/: lib.rs  main.rs
apps/agentic-workbench/src-tauri/src/application/: agent_run_errors.rs  agent_run_settings_service.rs  agent_tool_candidate_service.rs  cancel_prompt_and_send.rs  git_branch_service.rs  git_remote_service.rs  git_worktree_changes_service.rs  git_worktree_service.rs  goal_service.rs  list_provider_sessions.rs  mcp_title_control_service.rs  mod.rs  project_service.rs  saved_prompt_service.rs  start_agent_run.rs  window_menu_service.rs  worktree_file_service.rs  worktree_git_service.rs  worktree_workspace_layout_service.rs
apps/agentic-workbench/src-tauri/src/domain/: acp_session.rs  agent.rs  agent_run_settings.rs  agent_run_settings_repository.rs  agent_tool_candidate.rs  events.rs  git_branch.rs  git_branch_provider.rs  git_remote.rs  git_remote_provider.rs  git_worktree.rs  git_worktree_changes.rs  git_worktree_changes_provider.rs  git_worktree_provider.rs  goal.rs  goal_repository.rs  mcp_title_control.rs  mod.rs  project.rs  project_repository.rs  provider_session.rs  run.rs  saved_prompt.rs  saved_prompt_repository.rs  window_menu.rs  worktree_file.rs  worktree_file_provider.rs  worktree_git_provider.rs  worktree_workspace_layout.rs  worktree_workspace_layout_repository.rs
apps/agentic-workbench/src-tauri/src/inbound/: tauri_commands.rs
apps/agentic-workbench/src-tauri/src/infrastructure/: agent_catalog.rs  agent_session_registry.rs  devtools.rs  fs_provider_session_repository.rs  fs_worktree_file_provider.rs  fs_worktree_watcher.rs  git_cli_branch_provider.rs  git_cli_remote_provider.rs  git_cli_worktree_changes_provider.rs  git_cli_worktree_git_provider.rs  git_cli_worktree_provider.rs  json_acp_session_store.rs  json_agent_run_settings_repository.rs  json_goal_repository.rs  json_project_repository.rs  json_saved_prompt_repository.rs  json_store.rs  json_worktree_workspace_layout_repository.rs  mod.rs  native_window_menu.rs  perf_log.rs  tauri_run_event_sink.rs  window_manager.rs
apps/agentic-workbench/src-tauri/src/ports/: mod.rs  permission.rs  provider_session_repository.rs  session_handle.rs  (+1 more)
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md
apps/desktop/src-tauri/src/: lib.rs
crates/acp-agent-core/: Cargo.toml
crates/acp-agent-core/src/: lib.rs
crates/acp-agent-core/src/application/: cancel_agent_run.rs  mod.rs  send_prompt.rs  start_agent_run.rs  steer_prompt.rs
crates/acp-agent-core/src/domain/: events.rs  mod.rs
crates/acp-agent-core/src/infrastructure/: agent_catalog.rs  agent_session_registry.rs  mod.rs  permission_broker.rs
crates/acp-agent-core/src/ports/: acp_session_store.rs  mod.rs
(+622 files in other folders)
