[package]
name = "acp-minimal-app"
version = "0.1.0"
description = "Minimal Tauri shell for ACP"
authors = ["you"]
edition = "2024"

[lib]
name = "acp_minimal_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
agent-client-protocol = "0.15.0"
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
libc = "0.2"
percent-encoding = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.1"
walkdir = "2"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tokio = { version = "1.48", features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1.18", features = ["v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSResponder", "NSApplication"] }
